# ignition-nvim

./: .gitignore  .mcp.json  .ralphrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_CHECKLIST.md  DEBUG_LSP_COMPLETION.lua  DEBUG_PARSER.lua  LICENSE  LOAD_PLUGIN.lua  MANUAL_TEST_STEPS.md  PHASE2_TESTING.md  PROJECT_STATUS.md  QUICK_DEBUG.md  README.md  START_LSP_MANUAL.sh  TESTING.md  TEST_CONFIG.lua  TEST_CONFIG_SIMPLE.lua  TEST_DIRECT_START.lua  TEST_ENCODING.lua  TROUBLESHOOTING.md  lazy.lua  sample-test-project.json  test-install.lua  test-published.sh
.claude/: settings.local.json
.ralph/: .circuit_breaker_history  .circuit_breaker_state  .loop_start_sha  .ralph_session  .ralph_session_history  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
docs/: credits.md  (+1 more)
lsp/: README.md  pyproject.toml  run_tests.py
lsp/ignition_lsp/: __init__.py  api_loader.py  completion.py  definition.py  diagnostics.py  hover.py  java_loader.py  java_scope.py  json_completion.py  project_scanner.py  script_symbols.py  server.py  workspace_symbols.py
lsp/ignition_lsp/api_db/: __init__.py  schema.json  system_alarm.json  system_dataset.json  system_date.json  system_db.json  system_file.json  system_gui.json  system_nav.json  system_net.json  system_opc.json  system_perspective.json  system_security.json  system_tag.json  system_user.json  system_util.json
lsp/ignition_lsp/java_db/: com_inductiveautomation_common.json  com_inductiveautomation_gateway.json  java_awt.json  java_awt_event.json  java_awt_geom.json  java_io.json  java_lang.json  java_math.json  java_net.json  java_nio_file.json  java_schema.json  java_security.json  java_sql.json  java_text.json  java_time.json  java_time_format.json  java_time_temporal.json  java_util.json  java_util_concurrent.json  java_util_logging.json  java_util_regex.json  javax_crypto.json  javax_net_ssl.json  javax_servlet_http.json  javax_swing.json  javax_swing_table.json  javax_xml_parsers.json
lsp/tests/: __init__.py  conftest.py  test_api_loader.py  test_completion.py  test_definition.py  test_diagnostics.py  test_hover.py  test_java_completion.py  test_java_hover.py  test_java_loader.py  test_java_scope.py  test_json_completion.py  test_project_scanner.py  test_script_symbols.py  test_workspace_symbols.py
lsp/tests/fixtures/: tag_atomic_valid.json  tag_invalid_keys.json  tag_with_scripts.json
lsp/tools/: scrape_ignition_api.py
(+64 files in other folders)
