[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ignition-lsp"
version = "0.1.0"
description = "Language Server Protocol implementation for Ignition by Inductive Automation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Whiskey House E&T", email = "engineering@whiskeyhouse.com"}
]
keywords = ["ignition", "lsp", "language-server", "neovim", "inductive-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pygls>=1.3.0",
    "lsprotocol>=2023.0.0",
    "ignition-lint-toolkit>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
ignition-lsp = "ignition_lsp.server:main"

[project.urls]
Homepage = "https://github.com/pmannion2/ignition-nvim"
Repository = "https://github.com/pmannion2/ignition-nvim"
Issues = "https://github.com/pmannion2/ignition-nvim/issues"

[tool.setuptools.packages.find]
include = ["ignition_lsp*"]

[tool.setuptools.package-data]
ignition_lsp = ["py.typed"]
"ignition_lsp.api_db" = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
